--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
   <div class="questions">
     <h2>Let's start with your Name</h2>
     <input id="name" placeholder="Enter Your Name Here">
-    <h2> Would you rather spend the day reading, coding, playing a sport or designing clothing?</h2>
-    <input id="question1" placeholder="Reading, Coding, Sports, Designing">
-    <h2> Which would you rather disappear from earh forever: Waffles, Pancakes, or French Toast?</h2>
-    <input id="question2" placeholder="Pancakes, Waffles, or French Toast">
-    <h2>What is your favorite animal?</h2>
-    <input id="question3" placeholder="Mine is a Duck">
+    <h2>Are you a clean freak?</h2>
+    <input id="question1" placeholder="Yes, No">
+    <h2>Are you sarcastic?</h2>
+    <input id="question2" placeholder="Yes, No">
+    <h2>Do you love shopping?</h2>
+    <input id="question3" placeholder="Yes, No">
   </div>
   <div class="result">
-    <button>Click here to land your dream job!</button>
+    <button>Click here to land your dream job!</button>>
   </div>
+  <h2 id="userName"></h2>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src='js/script.js'></script>
 </body>
